Fixed horizontal scrollbar

--- a/serverless_client/src/App.css
+++ b/serverless_client/src/App.css
@@ -16,7 +16,7 @@ body {
 }
 
 nav {
-  width: 100vw;
+  width: 100%;
 }
 
 nav #nav {
